Work on synthetic mastery exams.